# voice_actor_recog

./: .gitignore  DatasetLoader.py  LICENSE  NN.py  README.md  convert_mov_to_wav.sh  make_data_ref_text.py  make_mfcc_data.py  make_recog_data.py  make_train_data.py  pyproject.toml  recognize_mfcc_data.py  requirements.txt  split_wav.sh  train_mfcc_data.py  train_network.py
tools/: download.py  remove_silence.py  split_wav.py
